added the files

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ cds.requires.db.[pg].credentials.port = 5432
 cds.requires.db.[pg].credentials.user = postgres
 cds.requires.db.[pg].credentials.password = postgres
 cds.requires.db.[pg].credentials.database = postgres
+
+cds.requires.API_PRODUCT_SRV.[pg].credentials.url="https://my409860-api.s4hana.cloud.sap/sap/opu/odata/sap/API_PRODUCT_SRV"
+cds.requires.API_PRODUCT_SRV.[pg].credentials.authentication="BasicAuthentication"
+cds.requires.API_PRODUCT_SRV.[pg].credentials.username="BTP_CLASS_USER"
+cds.requires.API_PRODUCT_SRV.[pg].credentials.password="Bze8GiFnoYiWWjLQdcqGVdMZtiADoVe~BqvPAnMK"
